add image but still need to work
image can show but can not upload by edit page.
using admin can upload other image to avatar

--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -28,7 +28,7 @@
   </tr>
   <tr>
     <td>Avatar</td>
-    <td><img src="{{ profile.avatar.url }}" alt=""></td>
+    <td><img src="{{ profile.avatar.url }}" alt="photo"></td>
   </tr>
 </table>
 
