add second email/ fix upload image
add second email/ fix upload image

--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -19,6 +19,10 @@
     <td>{{ profile.email }}</td>
   </tr>
   <tr>
+    <td>second email</td>
+    <td>{{ profile.second_email }}</td>
+  </tr>
+  <tr>
     <td>Birthday</td>
     <td>{{ profile.date_of_birth }}</td>
   </tr>
