update password validation and layout page
update password validation and layout page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,8 +45,8 @@
             <div class="circle--fluid--cell circle--fluid--primary">
                 <nav>
                     <ul class="circle--inline">
-                        <li><a href="#">nav</a></li>
-                        <li><a href="#">here?</a></li>
+                        <li><a href="{% url 'home' %}">home</a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </nav>
             </div>
