--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,6 +60,8 @@
                         {% else %}
                             <!-- view profile link here? -->
                             <!-- edit profile link here? -->
+                            <li><a href="{% url 'accounts:profile_detail' %}">view</a></li>
+                            <li><a href="{% url 'accounts:profile_edit' %}">edit</a></li>
                             <li><a href="{% url 'accounts:sign_out' %}">Sign Out</a></li>
                         {% endif %}
                     </ul>
