--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,6 +63,7 @@
                             <li><a href="{% url 'accounts:profile_detail' %}">view</a></li>
                             <li><a href="{% url 'accounts:profile_edit' %}">edit</a></li>
                             <li><a href="{% url 'accounts:sign_out' %}">Sign Out</a></li>
+                            <li><a href="{% url 'accounts:change_password' %}">Change Password</a></li>
                         {% endif %}
                     </ul>
                 </nav>
